# dr-automate

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  abrechnung_calc.py  ai_extract.py  app.py  auth.py  crypto.py  db.py  example_input.json  generator.py  generator_abrechnung.py  handoff.md  issues.md  models.py  models_db.py  nrkvo_rates.py  pyproject.toml  requirements_abrechnung.md  routing.py  ruff.toml  system_prompt.md
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_init.py  002_deepseek_key.py  003_auto_save_flag.py  004_bezahlt_email.py  005_anordnende.py  006_standard_verkehrsmittel.py  007_amtsbezeichnung.py
docs/: account.md  admin.md  datenschutz.md  faq.md  getting-started.md  haftung.md  security.md  workflow.md
static/: shared.css
templates/: abrechnung.html  account_request.html  admin_account_requests.html  base.html  dashboard.html  dienstreise_genehmigung.html  docs.html  index.html  landing.html  login.html  profil.html
tests/: conftest.py  test_abrechnung.py  test_ai_extract.py  test_app.py  test_auth.py  test_dashboard.py  test_db.py  test_profile_merge.py
